<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackgroundFloating"
    android:backgroundTint="?attr/colorBackgroundFloating">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragment.UserDetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="?attr/colorPrimary"
                app:menu="@menu/setting_menu"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="@string/app_name"
                app:titleTextColor="?attr/colorOnPrimary" />
        </com.google.android.material.appbar.AppBarLayout>


        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="?attr/colorSurfaceContainerHigh"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <ImageView
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/favorites"
            android:src="@drawable/ic_favorite_border_blue"
            app:layout_constraintBottom_toBottomOf="@+id/btn_share"
            app:layout_constraintEnd_toStartOf="@+id/btn_share"
            app:layout_constraintTop_toTopOf="@+id/btn_share" />

        <ImageView
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="@+id/img_detail_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_detail_photo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            app:civ_border_color="@color/md_theme_light_secondary"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            tools:src="@tools:sample/avatars" />


        <TextView
            android:id="@+id/tv_detail_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_detail_photo"
            tools:text="@string/user_name" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_login"
            tools:text="@string/user_realname" />

        <TableLayout
            android:id="@+id/tbl_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_detail_follow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    tools:text="@string/user_follow" />

                <TextView
                    android:id="@+id/tv_detail_follower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    tools:text="@string/user_following" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:gravity="center"
                    android:text="@string/user_follow"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/user_following"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"

            app:layout_constraintBottom_toBottomOf="@+id/tv_detail_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_detail_photo"
            tools:visibility="visible" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorBackgroundFloating"
            app:layout_constraintTop_toBottomOf="@+id/tbl_follow"
            app:tabTextAppearance="@style/TabTextAppearance"
            app:tabTextColor="?attr/colorOnBackground" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/colorOutline"
            app:layout_constraintBottom_toBottomOf="@+id/tabs" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
